# pyteet

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/simple/: .gitignore  app.ini.example  app.py  optional-requirements.txt  requirements.txt  user.sh
examples/simple/controllers/: account.py  company.py  contact.py  home.py
examples/simple/migrations/: 20260701171754_create_contacts.py  20260701171757_create_company.py  20260701171820_create_contact_company.py  20260701172327_seed_contact.py  20260706172438_create_pyteet_pat.py  20260706193525_create_contacts.py  20260709144430_create_pyteet_pat.py  20260709144709_create_contacts.py
examples/simple/models/: company.py  contact.py
src/pyteet/: __about__.py  __init__.py  __main__.py  config.py  constants.py  database.py  log.py  mail.py  migrations.py  model.py  personal_access_token.py  routing.py  util.py  validator.py
src/pyteet/commands/: env.py  init.py  make.py  make_command.py  make_controller.py  migrate.py  pat.py
src/pyteet/templates/: app.ini  app.ini.example.tpl  app.ini.tpl  app.py  app.py.tpl  command.py  controller.py  controller.py.tpl  gitignore.tpl  migration.py.tpl  migration_create_pyteet_pat.py.tpl  migration_mysql_create_pyteet_pat.py.tpl  migration_postgres_create_pyteet_pat.py.tpl  migration_sqlite_create_pyteet_pat.py.tpl  model.py.tpl  optional-requirements.txt.tpl  personal_access_token.py.tpl  requirements.txt.tpl
tests/: __init__.py
