[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyteet"
dynamic = ["version"]
description = 'Petite Python3 web framework.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Winther", email = "nathanwinther@fastmail.fm" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'Jinja2',
  'Werkzeug',
  'awsgi2',
]

[project.urls]
Documentation = "https://github.com/nathanwinther/pyteet#readme"
Issues = "https://github.com/nathanwinther/pyteet/issues"
Source = "https://github.com/nathanwinther/pyteet"

[tool.hatch.version]
path = "src/pyteet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyteet tests}"

[tool.coverage.run]
source_pkgs = ["pyteet", "tests"]
branch = true
parallel = true
omit = [
  "src/pyteet/__about__.py",
]

[tool.coverage.paths]
pyteet = ["src/pyteet", "*/pyteet/src/pyteet"]
tests = ["tests", "*/pyteet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
